# minimal_cross_manylinux

./: .travis.yml  Cargo.toml  README.md  cbindgen.toml
include/: header.h
src/: .travis.yml  lib.rs
